--- a/app/assets/stylesheets/exchange_rates.scss
+++ b/app/assets/stylesheets/exchange_rates.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the ExchangeData controller here.
+// Place all the styles related to the ExchangeRates controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
