--- a/app/views/currencies/index.html.erb
+++ b/app/views/currencies/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @currencies.each do |currency| %>
       <tr>
-        <td><%= currency.name %></td>
+        <td><%= currency.full_name %></td>
         <td><%= link_to 'Show', currency %></td>
         <td><%= link_to 'Edit', edit_currency_path(currency) %></td>
         <td><%= link_to 'Destroy', currency, method: :delete, data: { confirm: 'Are you sure?' } %></td>
