--- a/app/views/currencies/_form.html.erb
+++ b/app/views/currencies/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+    <div class="field">
+      <%= f.label :full_name %><br>
+      <%= f.text_field :full_name %>
+    </div>
   <div class="actions">
     <%= f.submit %>
   </div>
