--- a/app/views/currencies/show.html.erb
+++ b/app/views/currencies/show.html.erb
@@ -5,5 +5,7 @@
   <%= @currency.name %>
 </p>
 
+<%= line_chart Currency.predict.group_by_day(:created_at) %>
+
 <%= link_to 'Edit', edit_currency_path(@currency) %> |
 <%= link_to 'Back', currencies_path %>
