--- a/app/views/currencies/show.html.erb
+++ b/app/views/currencies/show.html.erb
@@ -5,7 +5,11 @@
   <%= @currency.name %>
 </p>
 
-<%= line_chart Currency.predict.group_by_day(:created_at) %>
+<%=form_for @currency.neural_network do |f| %>
+    <%= f.label "Days" %><br />
+    <%= f.text_field :prediction_days %>
+    <%= f.submit "Predict", class: "btn btn-primary" %>
+<% end %>
 
 <%= link_to 'Edit', edit_currency_path(@currency) %> |
 <%= link_to 'Back', currencies_path %>
