Added form for selecting number of days

--- a/app/views/currencies/show.html.erb
+++ b/app/views/currencies/show.html.erb
@@ -7,7 +7,7 @@
 
 <%=form_for @currency.neural_network do |f| %>
     <%= f.label "Days" %><br />
-    <%= f.text_field :prediction_days %>
+    <%= f.select(:prediction_days, [1..30]) %>
     <%= f.submit "Predict", class: "btn btn-primary" %>
 <% end %>
 
