Passed predictions test

--- a/app/views/predictions/show.html.erb
+++ b/app/views/predictions/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+    Expected values:
+</p>
+
+<p>
   <strong>Average difference:</strong>
   <%= @prediction.average_difference %>
 </p>
