--- a/app/views/predictions/show.html.erb
+++ b/app/views/predictions/show.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-<%= line_chart @prediction.exchange_rates.last %>
+<%= line_chart @prediction.exchange_rates.group_by_day(:date).count %>
 
 <p>
   <strong>Average difference:</strong>
