Changed ML to measure accuracy with chi squared

--- a/app/views/predictions/show.html.erb
+++ b/app/views/predictions/show.html.erb
@@ -6,11 +6,17 @@
 
 <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
 <% #TODO be careful this sums up all exchange rates in a day!!!!!%>
+
+<%= "Historic data" %>
+<%= line_chart @prediction.neural_network.currency.exchange_rates.group_by_day(:date).sum(:last) %>
+<%= "Predicted data" %>
 <%= line_chart @prediction.exchange_rates.group_by_day(:date).sum(:last) %>
 
 <p>
   <strong>Average difference:</strong>
   <%= @prediction.average_difference %>
+  <strong>Chi squared</strong>
+  <%= @prediction.chi_squared %>
 </p>
 
 <%= link_to 'Edit', edit_prediction_path(@prediction) %> |
