--- a/app/views/exchange_rates/_form.html.erb
+++ b/app/views/exchange_rates/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :date %><br>
-    <%= f.date_select :date %>
+    <%= f.label :time %><br>
+    <%= f.time_select :time %>
   </div>
   <div class="field">
     <%= f.label :last %><br>
