--- a/app/views/exchange_rates/index.html.erb
+++ b/app/views/exchange_rates/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Date</th>
+      <th>Time</th>
       <th>Last</th>
       <th>Volume</th>
       <th colspan="3"></th>
@@ -15,7 +15,7 @@
   <tbody>
     <% @exchange_rates.each do |exchange_rate| %>
       <tr>
-        <td><%= exchange_rate.date %></td>
+        <td><%= exchange_rate.time %></td>
         <td><%= exchange_rate.last %></td>
         <td><%= exchange_rate.volume %></td>
         <td><%= link_to 'Show', exchange_rate %></td>
