--- a/app/views/exchange_rates/show.html.erb
+++ b/app/views/exchange_rates/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Date:</strong>
-  <%= @exchange_rate.date %>
+  <strong>Time:</strong>
+  <%= @exchange_rate.time %>
 </p>
 
 <p>
