Adding polymorphic connections

--- a/app/views/predictions/_form.html.erb
+++ b/app/views/predictions/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :average_difference %><br>
-    <%= f.number_field :average_difference %>
+    <%= f.label :last_ad %><br>
+    <%= f.number_field :last_ad %>
   </div>
   <div class="actions">
     <%= f.submit %>
