--- a/app/views/markets/show.html.erb
+++ b/app/views/markets/show.html.erb
@@ -1,9 +1,11 @@
 <p id="notice"><%= notice %></p>
 
+<%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+
 <%= "Currency Historic data" %>
-<%= line_chart estimates_as_hash(@pred_currency.exchange_rates) %>
+<%= line_chart exchange_rates_as_hash(@pred_currency.exchange_rates) %>
 <%= "CAPM estimation" %>
-<%= line_chart estimates_as_hash(@predicted_exchange_rates) %>
+<%= line_chart exchange_rates_as_hash(@predicted_exchange_rates) %>
 
 <%= link_to 'Edit', edit_market_path(@market) %> |
 <%= link_to 'Back', markets_path %>
