Created portfolios - display maximum return after creation

--- a/app/views/currencies/index.html.erb
+++ b/app/views/currencies/index.html.erb
@@ -22,6 +22,11 @@
   </tbody>
 </table>
 
+<p>
+  Portfolio selection
+  <%= link_to 'Create new portfolio', new_portfolio_path %>
+</p>
+
 <br>
 
 <%= link_to 'New Currency', new_currency_path %>
