--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,8 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  Create new portfolio
-</p>
+<text>
+  You have created a portfolio.<br>
+  Now, input an expected return and the we will find and display a portfolio with minimum variance.
+</text><br><br>
 
 <p>
   <strong>Start date:</strong>
@@ -61,5 +62,4 @@
 </div>
 
 
-<%= link_to 'Edit', edit_portfolio_path(@portfolio) %> |
-<%= link_to 'Back', portfolios_path %>
+<%= link_to 'Back to main page', currencies_path %>
