--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <text>
   You have created a portfolio.<br>
   Now, input an expected return and the we will find and display a portfolio with minimum variance.
@@ -33,19 +31,25 @@
               </div>
           <% end %>
         <%= f.label "Portfolio Return" %>
-        <%= f.number_field(:p_return, id:"return_number") %>
+        <%= f.number_field :p_return, id:"return_number", step: "any" %>
         <%= f.submit "Obtain optimal portfolio", class: "btn btn-primary" %>
     <% end %>
 </div>
 
+<br><br>
+
 <div id="computed_portfolio">
   <% if(@portfolio.p_return != nil && @portfolio.p_return.between?(0, @portfolio.max_return)) %>
-      <strong>Optimal Variance:</strong>
-      <%= @portfolio.variance %>
-      <strong>Our portfolio will have the following currencies with their respective weights</strong>
 
+      <% #also computes the variance, needs to be before it%>
       <% weights = @portfolio.compute_weights %>
 
+      <strong>Optimal Variance:</strong>
+      <%= @portfolio.variance %>
+      <br>
+      <text>Our portfolio will have the following currencies with their respective weights</text>
+
+      <br>
       <table id="wt">
         <tr>
           <th>Currency</th>
@@ -54,11 +58,14 @@
         <% @portfolio.currencies.each do |cr| %>
             <tr>
               <td class="full_name"><%= cr.full_name %></td>
-              <td class="weight"><%= number_to_percentage(weights[cr] * 100) %></td>
+              <td class="weight"><%= number_to_percentage(weights[cr.full_name] * 100) %></td>
             </tr>
         <% end %>
       </table>
-    <% end %>
+
+      <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+      <%= pie_chart weights %>
+  <% end %>
 </div>
 
 
