--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,7 +1,10 @@
 <text>
-  You have created a portfolio.<br>
+  You have created a portfolio.
+  <br><br>
   Now, input an expected return and the we will find and display a portfolio with minimum variance.
-</text><br><br>
+  <br><br>
+  We are using the Markowitz Model which so the higher the return you select, the higher the variance.
+</text>
 
 <p>
   <strong>Start date:</strong>
