--- a/app/views/neural_networks/show.html.erb
+++ b/app/views/neural_networks/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_neural_network_path(@neural_network) %> |
-<%= link_to 'Back', neural_networks_path %>
+<%= link_to 'Back to the currency\'s page', currency_path(@pred_currency)%>
+<%= link_to 'Back to main page', currencies_path %>
