Added machine learning predictions

--- a/app/views/neural_networks/show.html.erb
+++ b/app/views/neural_networks/show.html.erb
@@ -1,4 +1,19 @@
-<p id="notice"><%= notice %></p>
+<%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+
+<text>
+  This page displays future predictions of different machine learning structure.
+</text><br><br>
+
+<%= "Currency Historic data" %>
+<% pp "exchange rates for predicted currency #{@pred_currency.full_name}, are #{@pred_currency.exchange_rates.size}"%>
+<%= line_chart exchange_rates_as_hash(@pred_currency.exchange_rates) %>
+
+<text>
+  Estimation for the following week.
+</text><br><br>
+
+<%= "Neural network with backpropagation estimation" %>
+<%= line_chart exchange_rates_as_hash(@nn_ers) %>
 
 <%= link_to 'Back to the currency\'s page', currency_path(@pred_currency)%>
 <%= link_to 'Back to main page', currencies_path %>
