--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,5 +1,13 @@
 <h1>New Portfolio</h1>
 
+<br><text>
+  Select a time when you would have invested in a portfolio.
+<br>
+  See how much you could have gained!
+</text>
+<br>
+<br>
+
 <%= render 'form' %>
 
 <%= link_to 'Back to main page', currencies_path %>
