--- a/app/views/currencies/index.html.erb
+++ b/app/views/currencies/index.html.erb
@@ -1,11 +1,5 @@
-<h1> Cryptocurrency Analytics </h1>
+<h1> Cryptocurrency Analytics and Predictions </h1>
 
-<br><text>
-  See how much you can gain by holding individual cryptocurrencies.
-</text><br>
-<p>
-  <%= link_to 'Create new portfolio', new_portfolio_path %>
-</p>
 <br>
 <br>
 
@@ -20,9 +14,24 @@
   </ul>
 </div>
 
-<p>
-  See the latest news and how they affect prices.
-</p>
-<p>
-  <%= link_to 'News articles', articles_path %>
-</p>
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <div class="caption">
+        <h3>Portfolio</h3>
+        <b>See how much you can gain by holding individual cryptocurrencies.</b>
+        <a href="portfolios/new" class="btn btn-primary btn-lg active" role="button">Create portfolio</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <div class="caption">
+        <h3>News Effect</h3>
+        <b>See how news articles affect cryptocurrency prices.</b>
+        <p><a href="articles" class="btn btn-primary btn-lg active" role="button">News articles</a></p>
+      </div>
+    </div>
+  </div>
+</div>
