--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Recent Cryptocurrency Articles</h1>
+<div class="panel panel-default">
+  <div class="panel-heading"><h4>Recent Cryptocurrency Articles</h4></div>
+  <% @articles.each do |article| %>
+      <b><a href=<%= "articles/#{article.id}" %> class="list-group-item"><%= article.name %></a></b>
+  <% end %>
+  </ul>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Body</th>
-      <th>Url</th>
-      <th>Published at</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.name %></td>
-        <td><%= article.body %></td>
-        <td><%= article.url %></td>
-        <td><%= article.published_at %></td>
-        <td><%= link_to 'Show', article %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
 <br>
 <%= link_to 'Back to main page', currencies_path %>
