--- a/app/views/neural_networks/show.html.erb
+++ b/app/views/neural_networks/show.html.erb
@@ -6,14 +6,14 @@
 
 <%= "Currency Historic data" %>
 <% pp "exchange rates for predicted currency #{@pred_currency.full_name}, are #{@pred_currency.exchange_rates.size}"%>
-<%= line_chart exchange_rates_as_hash(@pred_currency.exchange_rates) %>
+<%= line_chart exchange_rates_as_hash(@pred_currency.exchange_rates), library: {vAxis: {title: "US Dollars"}} %>
 
 <text>
   Estimation for the following week.
 </text><br><br>
 
 <%= "Neural network with backpropagation estimation" %>
-<%= line_chart exchange_rates_as_hash(@nn_ers) %>
+<%= line_chart exchange_rates_as_hash(@nn_ers), library: {vAxis: {title: "US Dollars"}} %>
 
 <text>
   You want to find out more about the currency?
